Mon May 20 18:52:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* code.c (Code_EvalLow): Merge into...
	(Code_Eval): ...this.
	* code.h (Code_EvalLow): Remove.
	* directive_data.c (DefineInt): Update comment.
	* symbolc (Symbol_BuildSymbolDataForAOF): Remove calls to Code_EvalLow.
	(Symbol_BuildSymbolDataForELF): Likewise.

Mon May 20 17:41:38 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpu.c (m_pkh): Be more whitespace tolerant.  Add CPU minimum
	version check.
	Fix case PKHTB without ASR being specified (bug report by Ben Avison).
	* src/targetcpu.h (kCPUExt_v6_DSP): Update comment.
	* unittests/compare/core/instr_pkhbt_pkhtb.s: Enhanced.

Mon May 20 17:14:29 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/debug_dwarf.c (DWARF_MarkAs): Don't assert for non-CODE areas.

Tue May 14 22:08:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* README: Update on DWARF status.
	* src/area.c (Area_CreateDWARF): Add section index argument.
	(Area_FindDWARF): Add.
	* src/area.h: Likewise.
	* src/debug_dwarf.c (DWARF_InitializeState): Initialize
	DWARF_State_t::elfRelocDataP.
	(DWARF_FinalizeState): Free DWARF_State_t::elfRelocDataP.
	(DWARF_OutputSectionData): Assign DWARF reloc section data to DWARF
	section's DWARF_State_t::elfRelocDataP so it can properly free'd.
	* src/debug_dwarf.h (DWARF_State_t::elfRelocDataP): Add.

Tue May 14 00:16:01 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* output.c (Output_ELF): Update comments. Don't assign non-zero sh_addr
	section header values.
	(DWARF code): Move to...
	* debug_dwarf.c, debug_dwarf.h: ...here.
	(DWARF_InitializeState, DWARF_FinalizeState): Add.
	(DWARF_MarkData_Store, DWARF_MarkData_Load, DWARF_MarkAs,
	FSObjTree_CreateFileEntry, FSObjTree_CreateDirEntry,
	DWARF_FSObjTree_Init, DWARF_FSObjTree_Finalize, DWARF_FSObjTree_GetIdx,
	DWARF_DumpDebugLine): Add.
	(DWARF_CreateAreasAndSections): Add .debug_line support.
	* output.h (shstrtab_t, SHSTRTAB_INIT_VALUE, shstrtab_add,